sort.basic.insertion.AlgInsertionSort.scala.error
Erreur de compilation :
AlgInsertionSort:8: error: not found: value n
    while(n!=i-1 || t==0 ){
          ^AlgInsertionSort:8: error: not found: value i
    while(n!=i-1 || t==0 ){
             ^AlgInsertionSort:8: error: not found: value t
    while(n!=i-1 || t==0 ){
                    ^AlgInsertionSort:9: error: not found: value i
          if (plusPetitQue(i-n,v)){
                           ^AlgInsertionSort:9: error: not found: value n
          if (plusPetitQue(i-n,v)){
                             ^AlgInsertionSort:9: error: not found: value v
          if (plusPetitQue(i-n,v)){
                               ^AlgInsertionSort:10: error: not found: value t
              t=1
              ^AlgInsertionSort:11: error: not enough arguments for method setValeur: (x$1: Int, x$2: Int)Unit.
Unspecified value parameter x$2.
              setValeur(i-n)
                       ^AlgInsertionSort:12: error: not found: value t
            t=1}
            ^AlgInsertionSort:14: error: not found: value n
            n+=1
            ^